--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 
 <html>
-    <head></head>
     <body style="background-color:#529C8D">
         <div style="text-align: center;">
             <iframe src="https://docs.google.com/document/d/e/2PACX-1vR3Oe1i9UrHp5z7DWBCS-xyoY5SwDJwhG7tJU6lV4C_9rY286t7Cbnsi2p4mGtPR2f1_gDMm1-kzDrX/pub?embedded=true" style="width: 50%; height: 1500px;"></iframe>
@@ -11,3 +10,4 @@
             <iframe src="https://docs.google.com/document/d/e/2PACX-1vQeZ8-vupKjTr-ZG84rDIPR9UIp9PUGu6EjgfiGAKiD53VNnd5KCxgV80Uo8EfC_SPIeR0d6_bgxkkq/pub?embedded=true" style="width: 50%; height:1500px;"></iframe>
         </div>
     </body>
+</html>
